--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   firebase_auth: ^6.1.2
   flutter_riverpod: ^3.0.3
   cloud_firestore: ^6.1.0
+  firebase_messaging: ^16.1.0
+  app_settings: ^7.0.0
+  flutter_local_notifications: ^19.5.0
 
 dev_dependencies:
   flutter_test:
